@@ -4,6 +4,7 @@ Bugfixes:
  - Qt: Fix install path of XDG desktop file with DESTDIR
  - Qt: Fix drag and drop on Windows
  - Qt: Reenable double buffering, as disabling it broke some Windows configs
+ - GBA Video: Start on the scanline BIOS finishes on if no BIOS is loaded
 Misc:
  - Qt: Remove useless help icons in dialogs
 
